--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .navbar {
-    background-color: #FFD700;
+    background-color: whitesmoke;
     padding: 1rem 2rem;
     display: fle
     justify-content: space-between;
